--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,22 @@
 hs_err_pid*
 replay_pid*
 
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+.classpath
+.settings
+.settings/
+
 target/
 
 /saved
