--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 		<maven.compiler.target>17</maven.compiler.target>
 		
 		<exec.mainClass>ltm.spsa_tracker.gui.Window</exec.mainClass>
+		<skipTests>true</skipTests>
+		<maven.test.skip>true</maven.test.skip>
 	</properties>
 
 	<dependencies>
@@ -86,5 +88,16 @@
 				</executions>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<filtering>true</filtering>
+				<directory>${project.basedir}</directory>
+				<targetPath>${project.build.directory}</targetPath>
+				<includes>
+					<include>graph_csv.py</include>
+					<include>last.cfg</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 </project>
